
			SWI-Prolog ChangeLog
			====================
VERSION 2.9.6
=============

  * FIXED: testing of write-premissions for the library index for
    make/0.

  * MODIFIED: Toplevel queries are now read from user_input, rather
    than from the current input stream.

  * ADDED: feature(history, Depth).  If 0, no history and no history-prompt
    are provided.  This is the default if feature(readline, true) succeeds.

  * FIXED: set_feature(Name, Integer)

  * FIXED: chdir/absolute_file_name problem, reported by Machiel Jansen.
    Thanks.

  * FIXED: erase/1 on records referenced by recorded/3 choicepoints.  Thanks
    to Robert van Engelen.

  * FIXED: Reference direction in recorded/3 (also used by findall/3 and
    friends).

  * FIXED: Removed various warnings for SunSoft cc compiler.  Fixed
    one error reported by this compiler.

  * FIXED: Cite references in online documentation.  Modified/Cleaned
    man/plindex.pl for this.  Fixed a few typos.


VERSION 2.9.5
=============

  * FIXED: dwim_predicate to deal properly with default modules.

  * FIXED online manual not to use overstrike by default.  See manual
    for details.  XPCE requires patched prolog/lib/swi_help.pl to work
    properly with this version.

  * FIXED: plld for handling -l<lib> correctly in the Unix version, and
    automatically deleting temporary .exp files in Win32.

  * FIXED important fix returning address of local variable, found by
    Jean Daniel Fekete.  Thanks.


VERSION 2.9.4
=============

  * FIXED: Various references to the variable stacks for systems requiring
    the stack-shifter.  Thanks to Michirou Yabuki for reporting.

  * FIXED: recorded database (and findall/3, bagof/3, setof/3 store) 
    handling of strings.  After retrieval, the string's indirect header
    was incorrect, making unification and equivalence fail.  Thanks to
    Andrew Dadakow for providing me with a simple program illustrating
    the problem.

VERSION 2.9.3
=============
